# internal/dto/response/category_response.go
@@ -1,0 +1,10 @@
+package response
+
+type CategoryResponse struct {
+	ID               uint   `json:"id"`
+	Name             string `json:"name"`
+	Description      string `json:"description"`
+	ParentCategoryID *uint  `json:"parent_category_id,omitempty"`
+	CreatedAt        string `json:"created_at"`
+	UpdatedAt        string `json:"updated_at"`
+}
